--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exim GoLog - {{ . }}</title>
+        <title>Exim GoLog</title>
     </head>
     <body>
-        <h1>{{ . }}</h1>
+        <h4>Pesquisa</h4>
         <div id="buscaMail">
             <form method="POST">
                 <input type="date" name="data"/>
